sg/main.tf
provider "aws"{
    region = "us-east-2"
}

resource "aws_instance" "ec2" {
  ami = "ami-032598fcc7e9d1c7a"
  instance_type = "t2.micro"
  security_groups = aws_security_group.my-sg.name
}

resource "aws_security_group" "my-sg" {
  name = "Allow HTTPS"

  ingress = {
    from_port = 443
    to_port = 443
    protocol = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress = {
    from_port = 443
    to_port = 443
    protocol = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
